# corebank

./: .gitignore  ADMIN_SYSTEM_GUIDE.md  PROJECT_STATUS.md  README.md  analyze_database_structure.py  database_analysis_report_20250625_171452.md  database_analysis_report_20250626_111755.md  database_analysis_report_20250626_111830.md  database_erd_full_20250625_171806.mmd  database_erd_simple_20250625_171806.mmd  database_structure_20250625_171452.json  database_structure_20250626_111755.json  database_structure_20250626_111830.json  debug_profile.py  export_to_markdown.py  generate_database_erd.py  investment_planning.md  test_admin_transactions.py  test_kyc_flow.py  test_new_user_profile.py  test_profile_api.py  test_purchase_api.py  transactions表重构实施计划.md  transactions表重构验证测试.md  verify_database_optimization.py  前端错误修复验证.md  导出脚本使用说明.md  已删除用户查看和恢复功能实现报告.md  数据库分析工具使用说明.md  数脉银行数据库结构深度分析报告.md
corebank-backend/: .env.example  Containerfile  README.md  alembic.ini  compose.dev.yml  compose.test.yml  compose.yml  create_test_investments.py  database_analysis_report_20250625_184854.md  database_optimization_verification_20250625_184654.md  database_structure_20250625_184854.json  pyproject.toml  test_holdings_data.py  test_investment_transactions.py  test_redemption_api.py  verify_portfolio_calculation.py
corebank-backend/alembic/: env.py
corebank-backend/corebank/: __init__.py  logging_config.py  main.py
corebank-backend/corebank/api/: __init__.py
corebank-backend/corebank/api/v1/: __init__.py  api.py  dependencies.py
corebank-backend/corebank/api/v1/endpoints/: __init__.py  accounts.py  admin.py  auth.py  investments.py  transactions.py
corebank-backend/corebank/core/: __init__.py  config.py  db.py  exceptions.py  permissions.py
corebank-backend/corebank/database/models/: investment.py
corebank-backend/corebank/models/: __init__.py  account.py  common.py  investment.py  transaction.py  user.py
corebank-backend/corebank/repositories/: __init__.py  postgres_repo.py
corebank-backend/corebank/schemas/: __init__.py
corebank-backend/corebank/security/: __init__.py  password.py  token.py
corebank-backend/corebank/services/: __init__.py  account_service.py  investment_service.py  transaction_service.py  user_service.py
corebank-backend/scripts/: create_test_user.py  run_tests.py  seed_investment_data.py
corebank-backend/tests/: __init__.py  test_auth_password_validation.py  test_investment_purchase.py  test_password_validation.py
corebank-backend/tests/api/: __init__.py  test_admin_api.py  test_auth_api.py  test_profile_update.py
corebank-backend/tests/integration/: __init__.py  test_decimal_precision.py  test_merged_transactions.py
corebank-backend/tests/legacy/: __init__.py  test_auth_service.py  test_user_repository.py
corebank-backend/tests/repositories/: __init__.py  test_user_repository.py
corebank-backend/tests/services/: __init__.py
corebank-frontend/: Containerfile  Containerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-investment-pages.html  test-purchase-function.html  tsconfig.json  verify-return-rates.html  vite.config.ts  vitest-setup.d.ts  vitest.config.ts
corebank-frontend/scripts/: test.sh
corebank-frontend/src/: App.tsx  index.css  main.tsx
corebank-frontend/src/api/: client.ts  transactions.ts  userProfile.ts
corebank-frontend/src/hooks/: useAccounts.ts  useAdmin.ts  useAdminTransactions.ts  useAuth.ts  useEnhancedTransactions.ts  useInvestments.ts  useTransactionRefresh.ts  useTransactions.ts  useUserProfile.ts
corebank-frontend/src/pages/: AccountsPage.tsx  DashboardPage.tsx  InvestmentDashboardPage.tsx  InvestmentHoldingsPage.tsx  InvestmentProductsPage.tsx  InvestmentTransactionsPage.tsx  ProductRecommendationsPage.tsx  ProfilePage.tsx  RegisterPage.tsx  RiskAssessmentPage.tsx  TransactionsPage.tsx
corebank-frontend/src/router/: index.tsx
corebank-frontend/src/test/: login-flow.test.tsx  setup.ts  utils.tsx  vitest.d.ts
docs/: Windows端Edge诊断脚本.ps1  数据库结构分析报告.md  数据库结构提取工具使用说明.md  数脉银行数据库架构设计详细报告.md  根目录清理总结报告.md
docs/diagrams/: database_erd_business_20250625_171806.mmd
reports/: 交易监控界面完善实施报告.md  数据库优化实施完成总结报告.md  数据库结构优化实施方案.md  管理员用户状态管理功能实现报告.md
tests/: test_chrome_connection.py  test_pagination.py
tools/: complete_database_analyzer.py  execute_database_optimization.py  simple_complete_analyzer.py  simple_db_analyzer.py
(+36 files in other folders)
